kubernetes/istio/gateway.yaml
# https://istio.io/latest/docs/tasks/traffic-management/ingress/ingress-control
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: gateway
 namespace: istio-ingress
spec:
  selector:
    # ingress-gatewayを選択
    istio: ingress
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-ingress
spec:
  gateways:
  - gateway
  hosts:
    - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx
        port:
          number: 80
      weight: 50
    - destination:
        host: apache
        port:
          number: 80
      weight: 50
